Fix design alignement

--- a/app/css/raspcontrol.css
+++ b/app/css/raspcontrol.css
@@ -63,14 +63,6 @@ header img {
   margin: 15px 0 0 0;
 }
 
-
-/*
- * 
- */
-
-
-
-
 /*
  * Pages
  */
@@ -79,6 +71,25 @@ header img {
   margin: 20px 0 60px 0;
 }
 
+.home table {
+  width: 100%;
+}
+.home tr {
+  vertical-align: top;
+  border-bottom: 1px solid #dedede;
+}
+.home td {
+  padding: 25px 0;
+}
+.home td.icon {
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.home .progress {
+  margin-bottom: 10px;
+}
 
 
 /*
